修复详情界面无法打开，过滤标签，高亮AI标签